[gd_scene load_steps=2 format=2]

[ext_resource path="res://scripts/vision.gd" type="Script" id=1]

[node name="vision" type="Node2D"]
position = Vector2( -0.0183094, 0.0612144 )
scale = Vector2( 2, 2 )
script = ExtResource( 1 )

[node name="ray1" type="RayCast2D" parent="."]
rotation = 0.830474
scale = Vector2( 0.163, 0.247 )
enabled = true
collision_mask = 3

[node name="ray2" type="RayCast2D" parent="."]
rotation = -0.0162171
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray3" type="RayCast2D" parent="."]
rotation = -0.968455
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray4" type="RayCast2D" parent="."]
rotation = -1.58324
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray5" type="RayCast2D" parent="."]
rotation = 1.56902
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray6" type="RayCast2D" parent="."]
rotation = 3.14381
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray7" type="RayCast2D" parent="."]
rotation = 2.38957
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3

[node name="ray8" type="RayCast2D" parent="."]
rotation = 3.87612
scale = Vector2( 0.162709, 0.247275 )
enabled = true
collision_mask = 3
